--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.1",
     "recharts": "^1.8.5",
     "web3": "^1.3.1"
